src/snapshots/droid_tui__regression__visual_modifier_shift_plus_modifier_snapshot@modifier_shift_mono_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                      DROID: modifier_switch_passthrough                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 [SHIFT 1] ──────────────────────────────────────────────────────────────┐
│     ○ B1.1          ○ L1.1          ○ B1.2          ○ L1.2                   │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│     ○ B1.3          ○ L1.3          ○ B1.4          ○ L1.4                   │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│     ○ B1.5          ○ L1.5          ○ B1.6          ○ L1.6                   │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│     ○ B1.7          ○ L1.7          ○ B1.8          ○ L1.8                   │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│     ◉ P1.1          ◉ P1.2                                                   │
│       0%              0%                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O [SHIFT 1] ────────────────────────────────────────────────────────────┐
│    ← Copy O1    ← Quantizer O2    ← Switch O4                                │
│     CV OUT          CV OUT          CV OUT                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘












┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | SHIFT 1 ACTIVE | MOD B1.1 → 15 cells / 9│
└──────────────────────────────────────────────────────────────────────────────┘
