src/snapshots/droid_tui__regression__visual_modifier_shift_plus_modifier_snapshot@modifier_shift_terminal_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: modifier_switch_passthrough                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌────┐┐
◉ ◉…  CV …
0%0%│    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│……││    ││
│  ││    ││
│  ││    ││
│○○││  ▶ ││
│○○││  … ││
│  ││    ││
│  ││    ││
│  ││  ▶ ││
│○○││  … ││
│……││    ││
│  ││    ││
│  ││    ││
│○○││    ││
│○○││    ││
│  ││    ││
│  ││  ▶ ││
│  ││  … ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
└──┘└────┘┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded modifier_switch_passthrough | SHIFT 1 ACTIVE | MOD B1.1 → 15 cells / 9 cables | Renders degraded at 120 cols — │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
