src/snapshots/droid_tui__regression__visual_multi_module_p2b8_snapshot@multi_module_p2b8_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                               DROID: multi_module_p2b8                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ P2B8 1 ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
││  ○ Button B1.1    ○ LED L1.1     ○ Button B1.2    ○ LED L1.2     ○ Button B1.3    ○ LED L1.3     ○ Button B1.4     ││
││       OFF             OFF             OFF             OFF             OFF             OFF             OFF          ││
││                                                                                                                    ││
││   ○ LED L1.4     ○ Button B1.5    ○ LED L1.5     ○ Button B1.6    ○ LED L1.6     ○ Button B1.7    ○ LED L1.7       ││
││       OFF             OFF             OFF             OFF             OFF             OFF             OFF          ││
││                                                                                                                    ││
││  ○ Button B1.8    ○ LED L1.8      ◉ Pot P1.1      ◉ Pot P1.2                                                       ││
││       OFF             OFF             0%              0%                                                           ││
││                                                                                                                    ││
│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌ P2B8 2 ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
││  ○ Button B2.1    ○ LED L2.1     ○ Button B2.2    ○ LED L2.2     ○ Button B2.3    ○ LED L2.3     ○ Button B2.4     ││
││       OFF             OFF             OFF             OFF             OFF             OFF             OFF          ││
││                                                                                                                    ││
││   ○ LED L2.4     ○ Button B2.5    ○ LED L2.5     ○ Button B2.6    ○ LED L2.6     ○ Button B2.7    ○ LED L2.7       ││
││       OFF             OFF             OFF             OFF             OFF             OFF             OFF          ││
││                                                                                                                    ││
││  ○ Button B2.8    ○ LED L2.8      ◉ Pot P2.1      ◉ Pot P2.2                                                       ││
││       OFF             OFF             0%              0%                                                           ││
││                                                                                                                    ││
│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘










┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 292 cols or reduce scale | Scale: 1.0 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
