src/snapshots/droid_tui__regression__visual_multi_module_p2b8_snapshot@multi_module_p2b8_classic_80.snap
---
source: src/regression.rs
assertion_line: 1955
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                           DROID: multi_module_p2b8                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐
◉ ◉…◉ ◉…
0%0%0%0%
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│○○│○○○│
│……│… …│
│  ││  │
│  ││  │
│○○│○ ○│
│○○│…○○│
│  ││  │
│  ││  │
│  ││  │
│○○│○○○│
│……│… …│
│  ││  │
│  ││  │
│○○│○ ○│
│○○│…○○│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
└──┘└──┘
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 292 │
└──────────────────────────────────────────────────────────────────────────────┘
