src/snapshots/droid_tui__regression__visual_multi_module_p2b8_snapshot@multi_module_p2b8_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                               DROID: multi_module_p2b8                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐
◉ ◉…◉ ◉…
0%0%0%0%
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│○○│○○○│
│……│… …│
│  ││  │
│  ││  │
│○○│○ ○│
│○○│…○○│
│  ││  │
│  ││  │
│  ││  │
│○○│○○○│
│……│… …│
│  ││  │
│  ││  │
│○○│○ ○│
│○○│…○○│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
└──┘└──┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 292 cols or reduce scale | Scale: 1.0 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
