src/snapshots/droid_tui__regression__visual_numbered_led_pairs_snapshot@numbered_led_pairs_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                           DROID: numbered_led_pairs                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Controller 1 ────────────────────────────────────────────────────────────────┐
│┌ ○ Button B1.1┐┌ ○ Button B1.2┐                                              │
││     OFF ○    ││     OFF ○    │                                              │
│└──────────────┘└──────────────┘                                              │
└──────────────────────────────────────────────────────────────────────────────┘





























┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Scale: 1.0 | Orientation: Portrait      │
└──────────────────────────────────────────────────────────────────────────────┘
